welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:3: error: value unary_! is not a member of java.awt.Color
} while(!getCouleurSol() == Color.white)
        ^